--- a/static-html/home.html
+++ b/static-html/home.html
@@ -3,7 +3,7 @@
 	<head><title>Docker Nginx</title>
 	</head>
 	<body>
-		  <h2>PROMIJENI ME NA STO GOD ŽELIŠ</h2>
+		  <h2>TEST 2</h2>
 	</body>
 </html>
 
